--- a/pro/vc/six.vcproj
+++ b/pro/vc/six.vcproj
@@ -156,6 +156,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\six\src\filestream.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\six\src\filestream.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\six\src\stream\filesystem.cpp"
 				>
 			</File>
