--- a/pro/vc/six.vcproj
+++ b/pro/vc/six.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\six\src"
+				AdditionalIncludeDirectories="..\..\six\src;..\..\six\src\stream"
 				PreprocessorDefinitions="WIN32;_DEBUG;_LIB"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
